[project]
name = "pictoria"
version = "0.1.0"
description = "Your Personal Image Gallery"
authors = [{ name = "Jannchie", email = "jannchie@gmail.com" }]
dependencies = [
    "fastapi>=0.115.5",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.36",
    "wdtagger>=0.10.1",
    "uvicorn>=0.32.0",
    "httpx>=0.27.2",
    "diffusers>=0.31.0",
    "openai>=1.54.4",
    "sqlmodel>=0.0.22",
    "watchdog>=6.0.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.17",
    "orjson>=3.10.11",
]

[tool.black]
line-length = 120
