[project]
name = "pictoria"
version = "0.1.0"
description = "Your Personal Image Gallery"
authors = [{ name = "Jannchie", email = "jannchie@gmail.com" }]
dependencies = [
    "fastapi>=0.115.5",
    "rich>=13.9.4",
    "wdtagger>=0.10.1",
    "uvicorn>=0.32.0",
    "httpx>=0.27.2",
    "diffusers>=0.31.0",
    "openai>=1.54.4",
    "sqlmodel>=0.0.22",
    "watchdog>=6.0.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.17",
    "orjson>=3.10.11",
    "onnxruntime-gpu>=1.20.0",
    "torch==2.5.1+cu124",
    "torchvision==0.20.1+cu124",
    "sqlalchemy>=2.0.36",
]

requires-python = ">=3.11"

[tool.black]
line-length = 120

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
